kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surveyform
  namespace: surveyform 
spec:
  selector:
    app: surveyform
  ports:
    - port: 8080
